--- a/package.json
+++ b/package.json
@@ -3,7 +3,12 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@types/bun": "latest"
+    "@eslint/js": "^9.4.0",
+    "@types/bun": "latest",
+    "@types/eslint__js": "^8.42.3",
+    "eslint": "^9.4.0",
+    "typescript": "^5.4.5",
+    "typescript-eslint": "^7.12.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
