--- a/package.json
+++ b/package.json
@@ -3,12 +3,13 @@
   "module": "index.ts",
   "type": "module",
   "devDependencies": {
-    "@eslint/js": "^9.20.0",
+    "@eslint/js": "^9.4.0",
     "@types/bun": "latest",
     "@types/eslint__js": "^8.42.3",
-    "eslint": "^9.20.1",
+    "eslint": "^9.4.0",
+    "globals": "^16.0.0",
     "typescript": "^5.7.3",
-    "typescript-eslint": "^8.24.1"
+    "typescript-eslint": "^7.12.0"
   },
   "peerDependencies": {
     "typescript": "^5.0.0"
